常规参数设置测试